Correct Spelling of Realtionships, fixed some lint-stuff
